# data.black-holes.org

./: .gitignore  Caddyfile  README.md  docker-compose.yml  file_tree.txt  pyproject.toml  restart  start  stop
.github/workflows/: ci.yml
cron/: README.md  docker-compose.yml
cron/cron.d/: crontab
cron/crontab_originals/: crontab_git.txt  crontab_root.txt  crontab_web.txt
cron/crontabs/: crontab_git.txt  crontab_root.txt  crontab_web.txt
cron/scripts/: bibtex2html.py
cron/scripts/git/: git_annex_get_all_data.py  git_annex_get_all_data.sh
cron/scripts/root/: backup.sh  fix_permissions.sh  update_ssl_certificates.sh
cron/scripts/web/: refresh_waveform_catalog_json.py
data/: .gitignore  docker-compose.yml
data/document_root/css/: file_listing.css
data/document_root/default/: 404.html  504.html  catalog.html  data.html  index.html
data/document_root/js/: file_listing.js  jsgrid_helpers.js  mathjax.js
data/document_root/simulations/: index.html
data/document_root/surrogates/: NRSur4d2s_tutorial.html  NRSur7dq2_tutorial.html  files  index.html
data/document_root/waveforms/: SimulationAnnex.git  catalog.json  catalog_info.json  catalog_info2.json  documentation.html  extcce_catalog.html  index.html  news.html  references.bib
data/nginx/: nginx.conf
data/uwsgi/: download.py  wsgi.ini
docs/: CNAME  index.html
docs/default/: 404.html  index.html
docs/simulations/assets/: ConnectedDataExplorerComponent-Ci4d0PuW.js  ImageComparisonComponent-CNTqLdnf.js  _baseEach-BjDLzUwG.js  _baseMap-Dzs_Q5qa.js  _baseUniq-BeLBH1ZI.js  _baseUniq-DqHaT24V.js  _baseUniq-sQi3NXjn.js  any-language-editor-DrZjy7mH.js  architectureDiagram-IEHRJDOE-BlhIanUj.js  blockDiagram-PHRCVELO-BMyZ52bP.js  c4Diagram-6F5ED5ID-0jXHLteW.js  c4Diagram-6F6E4RAY-DveKwcb7.js  channel-LYGgdr1R.js  chunk-67H74DCK-DG8iWVJ-.js  chunk-6OLS64BW-Dmt4rYEQ.js  chunk-7U56Z5CX-DaDsTYUM.js  chunk-A2AXSNBT-FRbQAbYg.js  chunk-E2GYISFI-fSvIEcyU.js  chunk-XZIHB7SX-CCCa7fcG.js  classDiagram-BGRH5UQR-BQbZmSV-.js  dagre-OKDRZEBW-Bwa3_I0y.js  diagram-QW4FP2JN-DmS4Evu5.js  diagram-VNBRO52H-w2_n0Igi.js  erDiagram-Q7BY3M3F-COqOeN_B.js  erDiagram-R3QVA2FD-B8SQvwhp.js  flowDiagram-PKI6S5ZS-BTbZVZp0.js  ganttDiagram-NTVNEXSI-D88-ldsw.js  gitGraphDiagram-7IBYFJ6S-D2c99Rh6.js  graph-CFDemIXQ.js  home-page-CRtb9DA6.js  home-page-DUbYTF9g.js  index-1_2JKFFC.js  index-B0-K_sX8.js  index-B9WlbtVk.js  index-BgLtBvrq.js  index-BsauUeyF.js  index-C2Gi1B_K.js  index-CDMGXjmM.js  index-CFMf3yUC.js  index-CH2sakSJ.js  (+42 more)
docs/surrogates/: GWSurrogate_example.html  NRHybSur3dq8.html
docs/waveforms/: docs.html  file_tree.txt  index.html  simulation-bibtex-keys.bib
document_root/: 404.html
document_root/simulations/: index.html
document_root/simulations/assets/: ConnectedDataExplorerComponent-B9BmPz9a.js  ConnectedDataExplorerComponent-CBKTnGIO.js  ImageComparisonComponent-D_1rLFqD.js  VegaLite-B_dlvmS8.js  VegaLite-DLKRDJvl.js  _baseEach-BRg52hSf.js  _baseMap-C8GGmDJG.js  _baseMap-CuZ-LBtv.js  _baseUniq-DNyfrpcN.js  _createAggregator-Baj-S-w2.js  _createAggregator-C_WhAECr.js  any-language-editor-DpXFI5QG.js  architectureDiagram-NQ2NVSRB-DqJfNlvg.js  architectureDiagram-SUXI7LT5-B47ODzlu.js  blockDiagram-6J76NXCF-DAEJc3eE.js  c4Diagram-6F6E4RAY-ttnVRT3Y.js  c4Diagram-VJAJSXHY-Doe4RcQE.js  channel-ukMKC8Ba.js  chunk-353BL4L5-D2cH1aM-.js  chunk-353BL4L5-DBdJb07A.js  chunk-67H74DCK-BhK3V2TP.js  chunk-AACKK3MU-BGsWBcze.js  chunk-AACKK3MU-CDOdA9eC.js  clone-Bk2-uU7a.js  (+122 more)
document_root/surrogates/: index.html
document_root/waveform-explorer/: index.html
document_root/waveforms/: catalog.html  documentation.html
jupyter/: .env  docker-compose.yml  entrypoint.sh  jupyter_notebook_config.json
letsencrypt/: docker-compose.yml
marimo_catalog/: notebook.py
static/css/: cuscosky.css
static/js/: file_listing.js
static/waveforms/: catalog_info.json  extcce_catalog.html
waveform_explorer/: premarimo_load.py
waveform_explorer/generate/: premarimo_load.py
waveform_explorer/notebook/: SXSInteractivePlots.py  aplus_noise (3).npz  ce_noise (1).npz  isxs_marimo.py  ligo_noise.npz  marimodata (2).npz
www/: .gitignore  docker-compose.yml  responder_nginx.conf
www/joomla/: php.ini  php_readwrite.ini
www/nginx/: dhparam.pem  login.conf  nginx-block-robots.conf  nginx-data.conf  nginx-headers.conf  nginx-oauth2-test.conf  nginx-ssl.conf  nginx.conf
www/oauth2/: README.md
(+325 files in other folders)
